kubernetes/deployment/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: idurar-backend
spec:
    type: ClusterIP
    selector:
        app: idurar-backend
    ports:
      - port: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: idurar-backend
spec:
    selector:
        matchLabels:
            app: idurar-backend
    replicas: 1
    template:
        metadata:
            labels:
                app: idurar-backend
        spec:
            imagePullSecrets:
              - name: cr-classic-registry-secret
            containers:
              - name: idurar-backend
                image: cr.classic.duckdns.org:58083/idurar-backend:latest
                ports:
                  - containerPort: 8888
