kubernetes/deployment/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: idurar-frontend
spec:
    type: ClusterIP
    selector:
        app: idurar-frontend
    ports:
      - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: idurar-frontend
spec:
    selector:
        matchLabels:
            app: idurar-frontend
    replicas: 1
    template:
        metadata:
            labels:
                app: idurar-frontend
        spec:
            imagePullSecrets:
              - name: cr-classic-registry-secret
            containers:
              - name: idurar-frontend
                image: cr.classic.duckdns.org:58083/idurar-frontend:latest
                ports:
                  - containerPort: 3000
