kubernetes/deployment/jaeger-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: jaeger
spec:
    type: ClusterIP
    selector:
        app: jaeger 
    ports:
      - port: 16686
        name: jaeger-ui-port
      - port: 4318
        name: jaeger-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: jaeger
spec:
    selector:
        matchLabels:
            app: jaeger
    replicas: 1
    template:
        metadata:
            labels:
                app: jaeger
        spec:
            containers:
              - name: jaeger
                image: jaegertracing/jaeger:latest
                args:
                  - "--config=/etc/jaeger-configs/jaeger.yml"
                ports:
                  - containerPort: 4318
                  - containerPort: 16686
                volumeMounts:
                  - name: jaeger-storage-volume
                    mountPath: /badger
                  - name: jaeger-config-volume
                    mountPath: /etc/jaeger-configs
            volumes:
              - name: jaeger-storage-volume
                persistentVolumeClaim:
                    claimName: jaeger-storage
              - name: jaeger-config-volume
                configMap:
                    name: jaeger-config
                    items:
                      - key: jaeger.yml
                        path: jaeger.yml
