kubernetes/deployment/mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: mongo
spec:
    type: ClusterIP
    selector:
        app: mongo
    ports:
      - port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo
spec:
    selector:
        matchLabels:
            app: mongo
    template:
        metadata:
            labels:
                app: mongo
        spec:
            containers:
              - name: mongo
                image: mongo:8.0.4
                ports:
                  - containerPort: 27017
                volumeMounts:
                  - name: mongo-storage-volume
                    mountPath: /var/lib/mongo
            volumes:
              - name: mongo-storage-volume
                persistentVolumeClaim:
                    claimName: mongo-storage
