kubernetes/deployment/prometheus-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: prometheus
spec:
    type: ClusterIP
    selector:
        app: prometheus 
    ports:
      - port: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prometheus
spec:
    selector:
        matchLabels:
            app: prometheus
    replicas: 1
    template:
        metadata:
            labels:
                app: prometheus
        spec:
            serviceAccountName: prometheus-account
            containers:
              - name: prometheus
                image: prom/prometheus:v2.53.0
                args:
                  - "--config.file=/etc/prometheus/prometheus.yml"
                  - "--storage.tsdb.path=/prometheus/"
                ports:
                  - containerPort: 9090
                volumeMounts:
                  - name: prometheus-storage-volume
                    mountPath: /prometheus
                  - name: prometheus-config-volume
                    mountPath: /etc/prometheus
            volumes:
              - name: prometheus-config-volume
                configMap:
                    name: prometheus-config
                    items:
                      - key: prometheus.yml
                        path: prometheus.yml
              - name: prometheus-storage-volume
                persistentVolumeClaim:
                    claimName: prometheus-storage
