kubernetes/deployment/valkey-deployment.yml
apiVersion: v1
kind: Service
metadata:
    name: valkey
spec:
    type: ClusterIP
    selector:
        app: valkey
    ports:
      - port: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: valkey
spec:
    selector:
        matchLabels:
            app: valkey
    template:
        metadata:
            labels:
                app: valkey
        spec:
            containers:
              - name: valkey
                image: valkey/valkey:alpine
                ports:
                  - containerPort: 6379
