kubernetes/deployment/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: idurar-gateway
spec:
    gatewayClassName: nginx
    listeners:
      - name: https
        port: 30045
        protocol: HTTPS
        hostname: "*.deployment-risks.duckdns.org"
        tls: 
            mode: Terminate
            certificateRefs: 
              - name: deployment-risks-tls

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: fronted-route
spec:
    parentRefs:
      - name: idurar-gateway
    hostnames:
      - frontend.deployment-risks.duckdns.org
    rules:
      - backendRefs:
          - name: idurar-frontend
            port: 3000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: backend-route
spec:
    parentRefs:
      - name: idurar-gateway
    hostnames:
      - backend.deployment-risks.duckdns.org
    rules:
      - backendRefs:
          - name: idurar-backend
            port: 8888

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: prometheus-route
spec:
    parentRefs:
      - name: idurar-gateway
    hostnames:
      - prom.deployment-risks.duckdns.org
    rules:
      - backendRefs:
          - name: prometheus
            port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: jaeger-route
spec:
    parentRefs:
      - name: idurar-gateway
    hostnames:
      - jaeger.deployment-risks.duckdns.org
    rules:
      - backendRefs:
          - name: jaeger
            port: 16686

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: grafana-route
spec:
    parentRefs:
      - name: idurar-gateway
    hostnames:
      - grafana.deployment-risks.duckdns.org
    rules:
      - backendRefs:
          - name: grafana
            port: 3000
